# zarr-icechunk-assure

./: .gitignore  README.md  justfile  pytest.ini  rungs.R
R/: make_refs.R  make_sources.R
R/tests/: helper-probe.R  test-gdal.R  test-refs.R  test-sources.R
fixtures/oisst-sample/: probe.json  sources.parquet
fixtures/oisst-sample/refs-https.zarr/: .zmetadata
fixtures/oisst-sample/refs-https.zarr/anom/: refs.0.parq
fixtures/oisst-sample/refs-https.zarr/err/: refs.0.parq
fixtures/oisst-sample/refs-https.zarr/ice/: refs.0.parq
fixtures/oisst-sample/refs-https.zarr/lat/: refs.0.parq
fixtures/oisst-sample/refs-https.zarr/lon/: refs.0.parq
fixtures/oisst-sample/refs-https.zarr/sst/: refs.0.parq
fixtures/oisst-sample/refs-https.zarr/time/: refs.0.parq
fixtures/oisst-sample/refs-https.zarr/zlev/: refs.0.parq
py/: explore_pace.py  make_repo.py  pyproject.toml
py/tests/: test_http_host.py  test_repo.py  test_store_hosts.py
